# imperal-job-finder

./: api_client.py  app.py  handlers_jobs.py  handlers_settings.py  imperal.json  main.py  panels_main.py  panels_side.py  params.py  pyproject.toml
server/: jobs.py  resume.py
tests/: test_extension.py
